hphp/test/slow/hh_namespace_migration/hh_frozenvector/hh_frozenvector3.php.expectf
HipHop Fatal error: Class undefined: Test\FrozenVector in %s/slow/hh_namespace_migration/hh_frozenvector/hh_frozenvector3.php on line 9
